<resources>
    <string name="app_name">Guarani App</string>
    <string name="urlAppServer">http://192.168.0.15:3000/api/v1.0/</string>
    <!-- Servidor apuntando a produccion -->
    <!--string name="urlAppServer">https://guarani-server.herokuapp.com/api/v1.0/</string-->
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="nav_header_desc">Encabezado</string>
    <string name="action_settings">Configuración</string>
    <string name="userName_hint">Nombre de Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="nombre_error">El nombre debe tener al menos 2 caracteres</string>
    <string name="password_error">La contraseña debe tener entre 4 y 10 caracteres</string>
    <string name="inscripcion">Inscripción a Cursos</string>
    <string name="seleccion_carrera">Carreras</string>
    <string name="message_confirm_exit">Desea salir de la aplicacion?</string>
    <string name="inscribirse_como_condicional">Inscribirme como Condicional</string>
    <string name="inscribirse">Inscribirme</string>
    <string name="desinscribirse">Desinscribirme</string>
    <string name="desinscripcion">Desinscripción a Cursos</string>
    <string name="modalidades">Modalidad de Clases</string>
    <string name="ayudantes">Ayudantes</string>
    <string name="oferta">Oferta Académica</string>
    <string name="historia">Historia Académica</string>
    <string name="condicional">Condicionales</string>
    <string name="dias_header">Días</string>
    <string name="horarios_header">Horarios</string>
    <string name="sede_header">Sede</string>
    <string name="aula_header">Aula</string>
    <string name="horario_header">Horario</string>
    <string name="curso_header">Curso %1$d</string>
    <string name="vacantes_header">Cupo: %1$d - Vacantes: %2$d</string>
    <string name="horario_row">%1$s - %2$s</string>
    <string name="legajo_header">Padrón: %1$d</string>
    <string name="alumno_header">%1$s, %2$s</string>
    <string name="mensaje_condicionales">No puede inscribirse como condicional mientras existan vacantes en otros cursos para esta materia.</string>
    <string name="desinscripcion_examen">Desinscripción a Exámenes</string>
    <string name="perfil">Perfil</string>
    <string name="encuestas">Encuestas</string>
    <string name="inscripcion_examen">Inscripción a Exámenes</string>
    <string name="seleccion_fechas_examenes">Fechas de Examen</string>
    <string name="horario_examen_header">Fecha de Examen</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="fcm_message">Notificación de Guaraní App</string>
    <string name="mesa_cancelada"><b>Mesa examen cancelada:</b> %1$s</string>
    <string name="anotarse_regular_examen">Regular</string>
    <string name="anotarse_libre_examen">Libre</string>
    <string name="seleccion_carrera_inscripcion_cursos">Inscripción a Cursos</string>
    <string name="seleccion_carrera_oferta">Oferta académica</string>
    <string name="seleccion_carrera_inscripcion_examenes">Inscripción a Examenes</string>
    <string name="prioridad">Mi Prioridad</string>
    <string name="prioridad_titulo">Tu prioridad es:</string>
    <string name="prioridad_fecha">Podrás inscribirte a los cursos a partir del </string>
    <string name="prioridad_fecha_habilitado">Ya te podés inscribir! Te encuentras habilitado desde %1$s hasta %2$s</string>
    <string name="mi_prioridad_toolbar">Mi Prioridad</string>
    <string name="prioridad_error">Las prioridades van a ser cargadas el día %1$s</string>
    <string name="mis_inscripciones">Mis Inscripciones a Cursos</string>
    <string name="periodo_desinscripcion">El periodo de desinscripción actual es desde el %1$s hasta el %2$s</string>
    <string name="error_no_inscripciones">No hay inscripciones en este período.</string>
    <string name="error_no_examenes">No hay examenes aun para esta materia.</string>
    <string name="encuestas_cursos">Encuestas de Cursos</string>
    <string name="error_no_encuestas">No hay encuestas que debas completar</string>
    <string name="responder_encuesta">Responder encuesta</string>
    <string name="pregunta_opinion_general">¿Cuál es tu opinión general del curso?</string>
    <string name="pregunta_error">Ha ocurrido un error inesperado.</string>
    <string name="pregunta_temas">¿Cómo te resultaron los temas de la materia?</string>
    <string name="pregunta_nivel_teoricas">A tu entender, ¿cuál fue el nivel de las clases teóricas?</string>
    <string name="pregunta_nivel_practicas">A tu entender, ¿cuál fue el nivel de las clases prácticas?</string>
    <string name="pregunta_actualidad">¿Te parecieron actualizados los temas tratados en la materia?</string>
    <string name="enviar_encuesta">Enviar encuesta</string>
    <string name="encuesta_comentario_hint">Comentarios opcionales</string>
</resources>
