<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_oferta"
            android:icon="@drawable/ic_menu_bulleted_list"
            android:title="@string/oferta" />
        <item
            android:id="@+id/nav_prioridad"
            android:icon="@drawable/ic_prioridad"
            android:title="@string/prioridad" />
        <item
            android:id="@+id/nav_inscribirme"
            android:enabled="false"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/inscripcion" />
        <item
            android:id="@+id/nav_mis_inscripciones_cursos"
            android:icon="@drawable/ic_mis_inscripciones"
            android:title="@string/mis_inscripciones" />
        <item
            android:id="@+id/nav_inscribirme_examen"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/inscripcion_examen" />
        <item
            android:id="@+id/nav_desinscribirme_examen"
            android:icon="@drawable/ic_person_add_disabled"
            android:title="@string/desinscripcion_examen" />
        <item
            android:id="@+id/nav_encuestas"
            android:icon="@drawable/ic_star_blank"
            android:enabled="true"
            android:title="@string/encuestas" />
        <item
            android:id="@+id/nav_historia"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/historia" />
    </group>

</menu>
