<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/prioridad_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/prioridad_titulo"
            android:textSize="18sp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center">
            <TextView
                android:id="@+id/prioridad_numero"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:gravity="center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/prioridad_shape"
                android:textSize="100sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/prioridad_fecha_inscripcion"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/prioridad_fecha"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/prioridad_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/prioridad_error_shape"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_info_black_18dp"
                android:layout_margin="8dp"
                android:tint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prioridad_error"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>